--- a/sofd-frontend/package.json
+++ b/sofd-frontend/package.json
@@ -18,11 +18,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4",
-    "h3-js": "^4.1.0",
-    "react-map-gl": "^7.1.2",
-    "mapbox-gl": "^2.15.0"
-
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
