--- a/sofd-frontend/package.json
+++ b/sofd-frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.17",
+    "@mui/icons-material": "^5.14.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,10 +19,8 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4",
-    "h3-js": "^4.1.0",
-    "react-map-gl": "^7.1.2",
-    "mapbox-gl": "^2.15.0"
+    "web-vitals": "^2.1.4"
+  
 
   },
   "scripts": {
